# adaptive_active_exposure_control

./: CMakeLists.txt  package.xml  readme.md
images/: readme.md
include/exposure_control/: aaec.h  camera.h  capture.h
launch/: aaec_exposure_control_standalone.launch  changeParam.launch  description.launch  live_robot_stag.launch  stag_and_fisheye_with_exposure_control.launch
msg/: ExposureRegion.msg
param/: bundle-four-stags-aluminum-and-large-six-tags.json  flir_senko_land_calibration.yaml  flir_standard_lens.yaml  marker_sizes_by_id.yaml
robots/: droplet.urdf
scripts/: follow_aruco.py
src/: aaec.cpp  aaec.h  aaec_encap_node.cpp  aaec_exposure_node.cpp  changeParam.cpp
